src/main/java/com/example/obrestdata_jpa/Error/InternalServerError.java
package com.example.obrestdata_jpa.Error;

public class InternalServerError extends RuntimeException {
    public InternalServerError(String message) {
        super(message);
    }
}
